CSRF protection added

--- a/templates/login.html
+++ b/templates/login.html
@@ -132,7 +132,7 @@
         <h2>Login to Fin-AiDea</h2>
 
         <form id="loginForm">
-             <!--<input type="hidden" name="csrf_token" value="{{ csrf_token() }}">-->
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
             <input type="email" id="email" placeholder="E-mail Address" required>
             <input type="password" id="password" placeholder="Password" required>
 
