--- a/templates/main.html
+++ b/templates/main.html
@@ -331,6 +331,7 @@
                 <div class="symbol-list" id="symbol-list">
                     <!-- List of symbols will be dynamically added here -->
                 </div>
+                <input type="hidden" name="csrf_token" id="csrf_token" value="{{ csrf_token() }}">
                 <!-- Add the new container here -->
                 <div class="additional-container">
 
@@ -389,17 +390,17 @@
             updateOptionsBasedOnAccountType();
 
             // Drawing text on the canvas
-            const canvas = document.getElementById('initial-canvas');
-            const ctx = canvas.getContext('2d');
+            const initialImage = document.getElementById('initial-canvas');
+            const ctx = initialImage.getContext('2d');
             ctx.fillStyle = 'white'; // Text color
             ctx.font = '54px Arial'; // Font size and family
             ctx.textAlign = 'center';
             ctx.textBaseline = 'middle';
              // Draw the first line
-            ctx.fillText('Fin-AiDea', canvas.width / 2, canvas.height / 2 - 250); // Adjusted Y position
+            ctx.fillText('Fin-AiDea', initialImage.width / 2, initialImage.height / 2 - 250); // Adjusted Y position
             // Draw the second line
             ctx.font = '34px Arial'; // Smaller font for the second line
-            ctx.fillText('Forecast Your Financial Future!', canvas.width / 2, canvas.height / 2 ); // Adjusted Y position
+            ctx.fillText('Forecast Your Financial Future!', initialImage.width / 2, initialImage.height / 2 ); // Adjusted Y position
 
             const loadingGif = document.getElementById('loading-gif');
             const plotImage = document.getElementById('plot-container');
@@ -533,6 +534,8 @@
 
         function addSymbol() {
             const symbolInputField = document.getElementById('symbol-name');
+            const csrfToken = document.querySelector('input[name="csrf_token"]').value; // Get CSRF token
+            console.log('CSRF Token:', csrfToken); 
             let symbol = symbolInputField.value.trim();
             if (symbol) {
                 symbol = symbol.toUpperCase();
@@ -540,7 +543,8 @@
                 fetch('/add_symbol', {
                     method: 'POST',
                     headers: {
-                        'Content-Type': 'application/json'
+                        'Content-Type': 'application/json',
+                        'X-CSRF-Token': csrfToken // Include CSRF token here
                     },
                     body: JSON.stringify({ symbol })
                 })
@@ -558,10 +562,12 @@
         }
 
         function deleteSymbol(symbol) {
+            const csrfToken = document.querySelector('input[name="csrf_token"]').value; // Get CSRF token
             fetch('/delete_symbol', {
                 method: 'POST',
                 headers: {
-                    'Content-Type': 'application/json'
+                    'Content-Type': 'application/json',
+                    'X-CSRF-Token': csrfToken // Include CSRF token here
                 },
                 body: JSON.stringify({ symbol })
             })
@@ -616,13 +622,19 @@
             const initialImage = document.getElementById('initial-canvas');
             const loadingGif = document.getElementById('loading-gif');
             const plotImage = document.getElementById('plot-container');
+            
             toggleVisibility(initialImage, 'none');
             toggleVisibility(loadingGif, 'block');
             toggleVisibility(plotImage, 'none'); // Hide the plot while loading
 
+            const csrfToken = document.querySelector('input[name="csrf_token"]').value; // Get CSRF token
             fetch('/predict', {
+                
                 method: 'POST',
-                headers: { 'Content-Type': 'application/json' },
+                headers: { 
+                    'Content-Type': 'application/json',
+                    'X-CSRF-Token': csrfToken // Include CSRF token here
+                },
                 body: JSON.stringify({ symbol, model_type: modelType, data_length: dataLength, forecast_days: forecastDays })
             })
             .then(response => response.json())
